--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
               >Phone Number</label
             >
             <input
-              type="number"
+              type="tel"
               class="form-control"
+              pattern="^\d{10}$"
+              
             />
           </div>
           <div class="mb-3 form-check">
