--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
               type="tel"
               class="form-control"
               pattern="^\d{10}$"
+              oninvalid="this.setCustomValidity('Please enter a 10 digit number')"
               
             />
           </div>
